<resources>
    <string name="activity_credits_title">Credits</string>
    <string name="activity_main_title">Performance Monitor</string>
    <string name="activity_readings_title">Raw data</string>
    <string name="activity_settings_title">Performance Monitor Settings</string>
    <string name="activity_stopwatch_title">Stopwatch</string>
    <string name="app_car_service_name">Performance Monitor</string>
    <string name="app_name">Performance Monitor</string>
    <string name="credits_author">This application was made by:</string>
    <string name="credits_basedon">Based on the SDK and demo App by:</string>
    <string name="credits_drivesafely">Drive Safely.</string>
    <string name="credits_thanks">Special thanks to:</string>
    <string name="element_customPID">Custom PID</string>
    <string name="element_EcoHMI_Score.AvgShort">Eco score</string>
    <string name="element_EcoHMI_Score.AvgTrip">Eco score average</string>
    <string name="element_VIN">VIN</string>
    <string name="element_absChargingAirPressure">Turbo charge pressure (absolute)</string>
    <string name="element_acceleratorPosition">Accelerator position</string>
    <string name="element_batteryVoltage">Battery voltage</string>
    <string name="element_blinkingState">Blinking state</string>
    <string name="element_brakePressure">Brake Pressure</string>
    <string name="element_coolantTemperature">Coolant temperature</string>
    <string name="element_currentConsumptionPrimary">Current consumption, primary fuel</string>
    <string name="element_currentConsumptionSecondary">Current consumption, secondary fuel</string>
    <string name="element_currentGear">Current gear</string>
    <string name="element_currentOutputPower">Output power</string>
    <string name="element_currentTorque">Torque</string>
    <string name="element_cycleConsumptionPrimary">Cycle consumption, primary fuel</string>
    <string name="element_cycleConsumptionSecondary">Cycle consumption, secondary fuel</string>
    <string name="element_engineSpeed">RPM</string>
    <string name="element_gearboxOilTemperature">Gearbox temperature</string>
    <string name="element_lateralAcceleration">Lateral G\'s</string>
    <string name="element_longitudinalAcceleration">Longitudinal G\'s</string>
    <string name="element_navAltitude">Altitude</string>
    <string name="element_navHeading">Heading</string>
    <string name="element_navLatitude">GPS latitude</string>
    <string name="element_navLongitude">GPS longitude</string>
    <string name="element_none">None</string>
    <string name="element_odometer">Odometer</string>
    <string name="element_oilTemperature">Oil temperature</string>
    <string name="element_outsideTemperature">Outside temperature</string>
    <string name="element_powermeter">Hybrid power</string>
    <string name="element_relChargingAirPressure">Turbo charge pressure (relative)</string>
    <string name="element_soundVolume">Sound volume</string>
    <string name="element_tankLevelPrimary">Tank level (primary)</string>
    <string name="element_tankLevelSecondary">Tank level (secondary)</string>
    <string name="element_test">Test (random, does not get data from the car)</string>
    <string name="element_tyreStateFL">Tyrestate front left</string>
    <string name="element_tyreStateFR">Tyrestate front right</string>
    <string name="element_tyreStateRL">Tyrestate rear left</string>
    <string name="element_tyreStateRR">Tyrestate rear right</string>
    <string name="element_tyrePressureFL">Tyrepressure front left</string>
    <string name="element_tyrePressureFR">Tyrepressure front right</string>
    <string name="element_tyrePressureRL">Tyrepressure rear left</string>
    <string name="element_tyrePressureRR">Tyrepressure rear right</string>
    <string name="element_tyreTemperatureFL">Tyre temperature front left</string>
    <string name="element_tyreTemperatureFR">Tyre temperature front right</string>
    <string name="element_tyreTemperatureRL">Tyre temperature rear left</string>
    <string name="element_tyreTemperatureRR">Tyre temperature rear right</string>
    <string name="element_vehicleSpeed">Speed</string>
    <string name="element_wheelAngle">Wheel angle</string>
    <string name="element_yawRate">Yaw rate</string>
    <string name="element_shortTermConsumptionPrimary">Short Term Consumption (primary fuel)</string>
    <string name="element_shortTermConsumptionSecondary">Short Term Consumption (secondary fuel)</string>
    <string name="font_audi" translatable="false">Audi Virtual Cockpit</string>
    <string name="font_frutiger" translatable="false">Frutiger</string>
    <string name="font_larabie" translatable="false">Larabie</string>
    <string name="font_seat" translatable="false">Seat Metastyle</string>
    <string name="font_segments" translatable="false">7 segment display</string>
    <string name="font_skoda" translatable="false">Skoda</string>
    <string name="font_vw" translatable="false">Volkswagen CarUI</string>
    <string name="font_vw2" translatable="false">Volkswagen Thesis</string>
    <string name="font_vw3" translatable="false">VW Digit</string>
    <string name="kick_uploads_done">Uploads scheduled.</string>
    <string name="kick_uploads_nothing_to_do">All uploads already completed.</string>
    <string name="notification_channel_description">Notifications displayed in Android Auto.</string>
    <string name="notification_channel_name">Car</string>
    <string name="notification_oil_text">Engine oil reached the working temperature.</string>
    <string name="notification_oil_title">Oil temperature</string>
    <string name="notification_service_text">Logging is active.</string>
    <string name="pref_ambient">Ambient colors</string>
    <string name="pref_ambient_off">Don\'t use ambient colors</string>
    <string name="pref_ambient_on">Use ambient colors, if avaiable</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_bigquery_dataset_title">Dataset name</string>
    <string name="pref_bigquery_project_id_title">Project ID</string>
    <string name="pref_bigquery_reupload_last_failed">Failed to initiate re-upload of the last log file.</string>
    <string name="pref_bigquery_reupload_all_title">Re-upload all log files</string>
    <string name="bigquery_reupload_all_failed">Failed to initate re-upload of the all log files.</string>
    <string name="bigquery_reupload_ok">Re-upload scheduled.</string>
    <string name="pref_bigquery_reupload_last_title">Re-upload last log file</string>
    <string name="pref_bigquery_table_default" translatable="false">mqbstats</string>
    <string name="pref_bigquery_table_title">Table name</string>
    <string name="pref_centerclock">Center clock</string>
    <string name="pref_choose_account_title">Choose account</string>
    <string name="pref_dataelementsettings">Data element settings</string>
    <string name="pref_dataelementsettings2">Data element settings (2nd dashboard)</string>
    <string name="pref_font">Font</string>
    <string name="pref_font_titles">Title font</string>
    <string name="pref_graphDelay">Graph Resolution</string>
    <string name="pref_graphitem">Graph</string>
    <string name="pref_highlow">Highest values</string>
    <string name="pref_highlow_off">Do not show max values</string>
    <string name="pref_highlow_on">Show max values for each clock</string>
    <string name="pref_highlowmarks">Mark highest values on clocks</string>
    <string name="pref_highlowmarks_off">A max mark is not shown on the clocks</string>
    <string name="pref_highlowmarks_on">A max mark is shown on the clocks</string>
    <string name="pref_highvis">High visibility dials</string>
    <string name="pref_highvis_off">Display a needle on the clocks</string>
    <string name="pref_highvis_on">Display a highly visible ray instead of a needle</string>
    <string name="pref_kick_uploads_title">Upload data now</string>
    <string name="pref_leftclock">Left clock</string>
    <string name="pref_list_providers_title">List providers</string>
    <string name="pref_logging_category_title">Logging</string>
    <string name="pref_notifications_category_title">Notifications</string>
    <string name="pref_oil_temp_monitoring_summary">Show notification when engine oil reaches working temperature.</string>
    <string name="pref_oil_temp_monitoring_title">Monitor oil temperature</string>
    <string name="pref_oil_temp_threshold_title">Oil working temperature</string>
    <string name="pref_omit_empty_readings_summary">Omit empty values in Raw data view</string>
    <string name="pref_omit_empty_readings_summary_off">Show empty values in Raw data view</string>
    <string name="pref_omit_empty_readings_title">Omit empty values</string>
    <string name="pref_pressureunit">Pressure unit</string>
    <string name="pref_providers">Telemetry providers</string>
    <string name="pref_providers_category_title">Telemetry providers</string>
    <string name="pref_resettoapply">Please connect to Android Auto to see results.</string>
    <string name="pref_rightclock">Right clock</string>
    <string name="pref_stats_logging_not_available">Logging not available: %1$s</string>
    <string name="pref_stats_logging_summary">Logs folder: %1$s</string>
    <string name="pref_stats_logging_title">Log car telemetry</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_ticks">Tick values</string>
    <string name="pref_ticks_off">Don\'t display value of ticks</string>
    <string name="pref_ticks_on">Display value of ticks</string>
    <string name="pref_upload_to_bigquery_title">Upload logs to BigQuery</string>
    <string name="pref_view1">View 1</string>
    <string name="pref_view2">View 2</string>
    <string name="pref_view3">View 3</string>
    <string name="pref_view4">View 4</string>
    <string name="pref_wheel_state_monitoring_summary">Generates a beep when during reverse-gear maneuvers the steering wheel crosses the zero angle.</string>
    <string name="pref_wheel_state_monitoring_title">Beep at zero steering angle</string>
    <string name="reupload_last_nothing_to_do">Nothing to re-upload.</string>
    <string name="cancel_uploads_done">Upload cancelled.</string>
    <string name="pref_cancel_uploads_title">Cancel all uploads</string>
    <string name="pref_powerunit">Power unit</string>
    <string name="pref_enable_2nd_dash">Enable secondary dashboard</string>
    <string name="testing">testing</string>
    <string name="unit_bar">bar</string>
    <string name="unit_g">G</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_kw">kW</string>
    <string name="unit_mph">mph</string>
    <string name="unit_nm">Nm</string>
    <string name="unit_psi">psi</string>
    <string name="unit_rpm">RPM</string>
    <string name="unit_rpm1000" translatable="false">×1000</string>
    <string name="unit_volt">V</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_celcius">Celcius</string>
    <string name="unit_f" translatable="false">°F</string>
    <string name="unit_c" translatable="false">°C</string>
    <string name="unit_hp">HP</string>
    <string name="unknown">unknown</string>
    <string name="pref_showmic_summary">Show microphone icon in statusbar</string>
    <string name="pref_showmic_summary_off">Don\'t show microphone icon in statusbar</string>
    <string name="pref_showmic_title">Microphone icon</string>
    <string name="item_details_name">Name:</string>
    <string name="item_details_minimum">Minimum value:</string>
    <string name="item_details_maximum">Maximum value:</string>
    <string name="item_details_resolution">Resolution:</string>
    <string name="item_details_current">Current value:</string>
    <string name="item_details_desciption">Description:</string>
    <string name="item_details_go_back">Go Back</string>
</resources>