<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:singleLineTitle="false"
        android:summary="Apply changes by switching the lights on/off"
        android:title="Appearance">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/Themes"
            android:entryValues="@array/Themes"
            android:key="selectedTheme"
            android:summary="%s"
            android:title="Theme" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="highVisActive"
            android:summaryOff="Only the needle is displayed"
            android:summaryOn="A ray is displayed behind the needle"
            android:title="High visibility dials" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="maxValuesActive"
            android:summaryOff="Do not show max/min values"
            android:summaryOn="Show max/min values on clocks"
            android:title="Highest/lowest values" />
    </PreferenceCategory>
    <PreferenceCategory
        android:singleLineTitle="false"
        android:title="Data element settings">

        <ListPreference
            android:entries="@array/ClockDataElementsEntries"
            android:entryValues="@array/ClockDataElementsValues"
            android:icon="@drawable/ic_settings_clockl"
            android:key="selectedClockLeft"
            android:summary="%s"
            android:title="Left clock" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ClockDataElementsEntries"
            android:entryValues="@array/ClockDataElementsValues"
            android:icon="@drawable/ic_settings_clockc"
            android:key="selectedClockCenter"
            android:summary="%s"
            android:title="Center clock" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ClockDataElementsEntries"
            android:entryValues="@array/ClockDataElementsValues"
            android:icon="@drawable/ic_settings_clockr"
            android:key="selectedClockRight"
            android:summary="%s"
            android:title="Right clock" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/TextDataElementsEntries"
            android:entryValues="@array/TextDataElementsValues"
            android:icon="@drawable/ic_settings_view1"
            android:key="selectedView1"
            android:summary="%s"
            android:title="View 1" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:entries="@array/TextDataElementsEntries"
            android:entryValues="@array/TextDataElementsValues"
            android:icon="@drawable/ic_settings_view2"
            android:key="selectedView2"
            android:summary="%s"
            android:title="View 2" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:entries="@array/TextDataElementsEntries"
            android:entryValues="@array/TextDataElementsValues"
            android:icon="@drawable/ic_settings_view3"
            android:key="selectedView3"
            android:summary="%s"
            android:title="View 3" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:entries="@array/TextDataElementsEntries"
            android:entryValues="@array/TextDataElementsValues"
            android:icon="@drawable/ic_settings_view4"
            android:key="selectedView4"
            android:summary="%s"
            android:title="View 4" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="selectPressureUnit"
            android:summaryOff="psi"
            android:summaryOn="bar"
            android:title="Pressure unit" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notifications_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="oilTempMonitoringActive"
            android:summary="@string/pref_oil_temp_monitoring_summary"
            android:title="@string/pref_oil_temp_monitoring_title" />
        <EditTextPreference
            android:defaultValue="70"
            android:dependency="oilTempMonitoringActive"
            android:dialogTitle="@string/pref_oil_temp_threshold_title"
            android:inputType="number"
            android:key="oilTempThreshold"
            android:title="@string/pref_oil_temp_threshold_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wheelStateMonitoringActive"
            android:summary="@string/pref_wheel_state_monitoring_summary"
            android:title="@string/pref_wheel_state_monitoring_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_providers_category_title">
        <Preference
            android:key="listProviders"
            android:title="@string/pref_list_providers_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_logging_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="statsLoggingActive"
            android:summary="@string/pref_stats_logging_summary"
            android:title="@string/pref_stats_logging_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="statsLoggingActive"
            android:key="uploadToBigquery"
            android:title="@string/pref_upload_to_bigquery_title" />
        <Preference
            android:dependency="uploadToBigquery"
            android:key="accountName"
            android:title="@string/pref_choose_account_title" />
        <EditTextPreference
            android:dependency="uploadToBigquery"
            android:key="bigqueryProjectId"
            android:title="@string/pref_bigquery_project_id_title" />
        <EditTextPreference
            android:dependency="uploadToBigquery"
            android:key="bigqueryDataset"
            android:title="@string/pref_bigquery_dataset_title" />
        <EditTextPreference
            android:defaultValue="@string/pref_bigquery_table_default"
            android:dependency="uploadToBigquery"
            android:key="bigqueryTable"
            android:title="@string/pref_bigquery_table_title" />
        <Preference
            android:dependency="uploadToBigquery"
            android:key="bigqueryReuploadLast"
            android:title="@string/pref_bigquery_reupload_last_title" />
        <Preference
            android:dependency="uploadToBigquery"
            android:key="kickUploads"
            android:title="@string/pref_kick_uploads_title" />
    </PreferenceCategory>
</PreferenceScreen>