<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fragment_item_details_tv_itemName"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/item_details_name"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_itemName_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_item_details_tv_itemName"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_minVal_name"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_details_minimum"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_itemName"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_minVal_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_item_details_tv_minVal_name"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_maxVal"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_details_maximum"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_minVal_name"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_maxVal_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_item_details_tv_maxVal"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_resVal"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_details_resolution"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_maxVal"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_resVal_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_item_details_tv_resVal"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_currentValue"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_details_current"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_resVal"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_currentValue_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/fragment_item_details_tv_currentValue"
        android:textStyle="bold"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_descr"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_details_desciption"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_currentValue"
        tools:textColor="@android:color/white" />

    <TextView
        android:id="@+id/fragment_item_details_tv_descr_value"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:textAppearance="@style/CarBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_item_details_tv_descr"
        android:textStyle="bold|italic"
        tools:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/items_fragment_back_btn"
        android:text="@string/item_details_go_back"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>